syntax = "proto3";

option go_package = "pb/book";

import "pb/book/book-uploader.proto";

message Book {
    string book_id = 1;
    string title = 2;
    string author = 3;
    string publisher = 4;
    int64 pages_total = 5;
    int64 qty = 6;
    string cover = 7;
    string description = 8;
    string location_id = 9;
    BookUploader uploader = 10;
    int64 created_at = 11;
    int64 updated_at = 12;
    int64 deleted_at = 13;
}
